css/styles.css
/* ... */
/* DESKTOP */

@media only screen and (min-width: 1280px) {
  header {
    padding: 1rem;
    justify-content: normal;
    padding: 1rem 3rem;
  }

  .menu-icon {
    display: none;
  }

  .separator-line {
    margin: 0 3rem;
  }

  .header-right-icons {
    margin: 0 30px 0 auto;
  }

  .blog-page-banner-image {
    height: 500px;
  }

  .blog-page-content {
    width: 70%;
  }

  .about-blog {
    display: grid;
    gap: 2rem;
    width: 60%;
    justify-items: center;
    grid-template-areas: "about-grid1 about-grid2 about-grid2";
    margin: 2rem 0;
    padding: 2rem;
  }

  .about-grid1 {
    grid-area: about-grid1;
  }

  .about-grid2 {
    grid-area: about-grid2;
  }

  .welcome-content {
    width: 70%;
  }

  .welcome-content h2 {
    margin-bottom: 1rem;
  }

  .quick-link-containers {
    flex-direction: row;
  }

  footer {
    flex-direction: row;
    align-items: normal;
    gap: 2rem;
    text-align: left;
    padding: 2rem 0;
  }

  .footer-first,
  .footer-second,
  .footer-third {
    margin-left: 3rem;
  }

  .footer-fourth {
    display: flex;
    margin: 0 3rem 0 auto;
  }

  .author-section {
    width: 40%;
  }

  .contact-form {
    width: 40%;
    padding-top: 2rem;
    margin-bottom: 3rem;
  }

  h2 {
    margin: 2rem 0;
  }

  .footer-icons {
    justify-content: normal;
  }

  .search-content {
    gap: 2rem;
    grid-template-columns: repeat(5, 1fr);
    min-height: 0;
  }

  .navbar {
    background-color: transparent;
    position: static;
    display: flex;
    top: 0;
    padding: 1rem 0;
    width: auto;
  }

  .nav-menu {
    display: flex;
    gap: 1rem;
    width: auto;
    justify-items: normal;
    align-items: normal;
  }

  .nav-link {
    justify-content: normal;
    align-items: normal;
    color: black;
    text-decoration: none;
    width: 100%;
    height: 100%;
    padding: 0;
  }

  .nav-item {
    width: auto;
    height: auto;
    display: block;
    border: none;
  }

  .nav-link:hover {
    background-color: transparent;
    color: var(--orange-text-contrast);
    text-decoration: none;
  }

  .page-active {
    color: var(--orange-text-contrast);
  }

  .page-active:hover {
    color: black;
  }

  .category-dropdown {
    position: absolute;
    display: none;
    padding: 1rem;
    border-radius: 0 0 10px 10px;
    width: auto;
    left: auto;
    top: auto;
    box-shadow: 0 0 1em rgb(0 0 0 / 0.3);
  }

  .category-dropdown a,
  .category-dropdown p,
  .tag-dropdown a {
    width: 100%;
    padding: 0.5rem;
    background-color: var(--orange);
  }

  .category-active,
  .tag-active {
    display: flex;
  }

  .tag-active {
    width: 90%;
  }

  .carousel-container {
    --items-per-screen: 4;
  }

  .modal-dialog {
    width: 60%;
  }

  .blog-list-container {
    width: 100%;
    grid-template-columns: repeat(4, 1fr);
    grid-template-areas:
      "blog-list-grid1 blog-list-grid2 blog-list-grid3 blog-list-grid4"
      "blog-list-grid5 blog-list-grid6 blog-list-grid7 blog-list-grid8"
      "blog-list-grid9 blog-list-grid10 blog-list-grid0 blog-list-grid11";
  }

  .blog-list-grid1 {
    grid-area: blog-list-grid1;
  }

  .blog-list-grid2 {
    grid-area: blog-list-grid2;
  }

  .blog-list-grid3 {
    grid-area: blog-list-grid3;
  }

  .blog-list-grid4 {
    grid-area: blog-list-grid4;
  }

  .blog-list-grid5 {
    grid-area: blog-list-grid5;
  }

  .blog-list-grid6 {
    grid-area: blog-list-grid6;
  }

  .blog-list-grid7 {
    grid-area: blog-list-grid7;
  }

  .blog-list-grid8 {
    grid-area: blog-list-grid8;
  }

  .blog-list-grid9 {
    grid-area: blog-list-grid9;
  }

  .blog-list-grid10 {
    grid-area: blog-list-grid10;
  }

  .blog-list-grid11 {
    grid-area: blog-list-grid11;
  }

  .author-of-content {
    grid-template-columns: 1fr 1fr;
  }

  .blog-comments {
    width: 70%;
  }

  .blog-comments-form {
    width: 60%;
    align-self: center;
  }

  .blog-comments-container {
    width: 50%;
    align-self: center;
    gap: 3rem;
    grid-template-columns: 1fr 1fr;
  }

  .previous-articles-list {
    align-items: normal;
  }

  .author-of {
    margin: 1rem 0 3rem 0;
  }

  .footer-content {
    justify-content: space-between;
    gap: 0;
  }
}

@media only screen and (max-width: 1400px) {
  .about-blog {
    width: 80%;
  }
}

